<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="10dp"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="zw.co.power.www.powervision.ContactForm" android:onClick="send_click"
    android:background="#FFFFFFFF">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form1"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" android:textColor="#0509fe" android:textSize="20dp"
        android:typeface="serif"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_below="@+id/textView2" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form2"
        android:id="@+id/textView3"
        android:textColor="#0717fa" android:textSize="20dp"
        android:layout_below="@+id/name" android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" android:typeface="serif"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:layout_below="@+id/textView3" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form3"
        android:id="@+id/textView4"
        android:textColor="#0519f9"
        android:textSize="20dp"
        android:layout_below="@+id/email" android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" android:typeface="serif"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/subject"
        android:layout_below="@+id/textView4" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form4"
        android:id="@+id/textView5"
        android:textSize="20dp" android:textColor="#050eff"
        android:layout_below="@+id/subject" android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" android:typeface="serif"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/message"
        android:layout_above="@+id/button" android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form5"
        android:id="@+id/button"
        android:onClick="send_click"
        android:textColor="#0e14f3" android:textSize="20dp" android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" android:layout_alignParentEnd="true"
        android:layout_marginBottom="92dp" android:typeface="serif"/>
</RelativeLayout>
</android.support.v7.widget.CardView>